转化成kotlin，完成room + paging + viewModel 例子

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical"
+	tools:context=".ui.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+	<Button
+		android:id="@+id/mBtnBasicUsage"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="基本用法" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	<Button
+		android:id="@+id/mBtnHeaderMultiType"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="为列表添加Header，通过多类型列表实现（有缺陷）" />
+
+	<Button
+		android:id="@+id/mBtnHeaderProxy"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="为列表添加Header" />
+</LinearLayout>
